# tree-sitter-baml-helix

./: .grammar.js.swp  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  grammar.js.bak  package.json  pyproject.toml  setup.py  shell.nix  tree-sitter.json
bindings/c/: tree-sitter-baml.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_baml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBaml/: baml.h
bindings/swift/TreeSitterBamlTests/: TreeSitterBamlTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
