[package]
name = "tree-sitter-baml"
description = "BAML is a DSL for AI applications."
version = "0.81.0"
authors = ["BoundaryML"]
license = "Apache License 2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "baml"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/boundaryml/baml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
