[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-baml"
description = "BAML is a DSL for AI applications."
version = "0.81.0"
keywords = ["incremental", "parsing", "tree-sitter", "baml"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "BoundaryML" }]
requires-python = ">=3.10"
license.text = "Apache License 2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/boundaryml/baml"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
